--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,7 +2,7 @@
   "accentColor": "",
   "theme": "obsidian",
   "interfaceFontFamily": "한컴산뜻돋움",
-  "cssTheme": "",
+  "cssTheme": "Things",
   "translucency": false,
   "nativeMenus": false
 }
